--- a/experiments/rfcn/cfgs/resnet_v1_101_voc0712_rfcn_dcn_end2end_ohem.yaml
+++ b/experiments/rfcn/cfgs/resnet_v1_101_voc0712_rfcn_dcn_end2end_ohem.yaml
@@ -52,6 +52,7 @@ dataset:
   dataset: PascalVOC
   dataset_path: "./data/VOCdevkit"
   image_set: 2007_trainval+2012_trainval
+#  image_set: 2007_trainval
   root_path: "./data"
   test_image_set: 2007_test
   proposal: rpn
